--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,9 @@
     />
     <link rel="stylesheet" href="./css/index.css">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   <title>Currency Converter</title>
+   <title>Xe Currency Converter - Live Exchange Rates Today</title>
+
+   <link rel = "icon" href = "https://upload.wikimedia.org/wikipedia/commons/7/75/XELogo_RGB.svg" type = "image/x-icon">
   </head>
   <body>
     <div id="root"></div>
